--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,6 +249,75 @@ nav .container ul li .judul img{
 }
 /* Berita END */
 
+/* Conact START */
+.contact{
+    width: 100%;
+    background-color: green;
+}
+
+.contact .container{
+    padding: 10px;
+}
+
+.contact .container h2{
+    color: white;
+    text-align: center;
+}
+
+.contact .container ul{
+    padding: 20px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.contact .container ul li{
+    padding: 2px;
+
+    list-style-type: none;
+}
+
+.contact .container ul li a{
+    color: white;
+    padding: 20px;
+
+    text-decoration: underline;
+    text-underline-offset: 10px;
+}.contact .container ul li a:hover{
+    color: rgb(194, 194, 194);
+    text-underline-offset: 5px;
+}
+
+
+.contact-detail{
+    width: 100%;
+}
+
+.contact-detail .container{
+    margin: 10px;
+    min-width: 80%;
+    max-width: 80%;
+
+    margin: 0 auto;
+    display: block;
+    padding: 10px;
+}
+
+.contact-detail .container ul{
+    margin: 10px;
+}
+
+.contact-detail .container ul p iframe{
+    width: 100%;
+}
+
+
+.contact-detail .container ul a{
+
+}.contact-detail .container ul a img{
+    width: 10%;
+}
+/* Conact END */
+
 /* Footer START */
 .footer{
     width: 100%;
